--- a/index.html
+++ b/index.html
@@ -78,38 +78,37 @@
         <h2 id="masterLog"></h2>
         <p id="secondLog"></p>
       </div>
-      <section>
-        <div class='inventory'>
+      <section class='inventoryFunctions' style="display: none">
+        <div>
           <h1>On Hand Inventory</h1>
-          <form>
+          <form id='new-item'>
             <fieldset>
               <legend>Create New Inventory Item</legend>
               <input id="new-item-name" type="string" name="items[name]" placeholder="Item Name">
               <input id="new-item-department" type="string" name="items[department]" placeholder="Department">
               <input id="new-item-quantity" type="number" name="items[quantity]" placeholder="qty">
               <input id="new-item-cost" type="number" name="items[cost]" placeholder="Cost per Unit">
-              <input type="submit" value="Create">
+              <input id='createItemButton' type="submit" value="Create">
             </fieldset>
-        <div class='inventorySummary'>
-          <div>
-            <div class='container'>
-              <div class='singleItem'>
-                <p class="singleItemName">singleItemName</p>
-                <p class="singleItemDepartment">singleItemDepartment</p>
-                <p class="singleItemQuantity">singleItemQuantity</p>
-                <p class="singleItemCost">singleItemCost</p>
-                <p class="singleItemPrice">singleItemPrice</p>
-                <p class="singleItemCreator">singleItemCreator</p>
-                <p class="singleItemAge">singleItemAge</p>
-                <form>
-                  <input id="update-item-quantity" type="number" name="items[quantity]" placeholder="update qty">
-                  <input id="update-item" type="submit" value="Update">
-                  <input id="delete-item" type="submit" value="Delete">
-                </form>
-              </div>
-            </div>
+          </form>
+        <div class='container'>
+          <div class='singleItem'>
+            <p class="singleItemName">singleItemName</p>
+            <p class="singleItemDepartment">singleItemDepartment</p>
+            <p class="singleItemQuantity">singleItemQuantity</p>
+            <p class="singleItemCost">singleItemCost</p>
+            <p class="singleItemPrice">singleItemPrice</p>
+            <p class="singleItemCreator">singleItemCreator</p>
+            <p class="singleItemAge">singleItemAge</p>
+            <form>
+              <input id="update-item-quantity" type="number" name="items[quantity]" placeholder="update qty">
+              <input id="update-item" type="submit" value="Update">
+              <input id="delete-item" type="submit" value="Delete">
+            </form>
           </div>
         </div>
-      </section>
-    </body>
+      </div>
+    </section>
+    <button id="getAll">Get All Items</button>
+  </body>
 </html>
