found syntax error in HTML and corrected it

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
           <form id='new-item'>
             <fieldset>
               <legend>Create New Inventory Item</legend>
-              <input id="new-item-name" type="string" name="items[name]" placeholder="Item Name">
-              <input id="new-item-department" type="string" name="items[department]" placeholder="Department">
-              <input id="new-item-quantity" type="number" name="items[quantity]" placeholder="qty">
-              <input id="new-item-cost" type="number" name="items[cost]" placeholder="Cost per Unit">
+              <input id="new-item-name" type="string" name="item[name]" placeholder="Item Name">
+              <input id="new-item-department" type="string" name="item[department]" placeholder="Department">
+              <input id="new-item-quantity" type="number" name="item[quantity]" placeholder="qty">
+              <input id="new-item-cost" type="number" name="item[cost]" placeholder="Cost per Unit">
               <input id='createItemButton' type="submit" value="Create">
             </fieldset>
           </form>
