Splitting GET Response Item Array into Parts to Fill Cloned Div

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h2 id="masterLog"></h2>
         <p id="secondLog"></p>
       </div>
-      <section class='inventoryFunctions' style="display: none">
+      <section class='inventoryFunctions'>
         <div>
           <h1>On Hand Inventory</h1>
           <form id='new-item'>
