Finished Correcting IUI Max Stack Error in forEach via moving jquery out of loop

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <div class='container'>
           <div class='singleItem'>
             <form>
-              <input id="update-item-quantity" type="number" name="items[quantity]" placeholder="update qty">
-              <input id="update-item" type="submit" value="Update">
-              <input id="delete-item" type="submit" value="Delete">
+              <input class="update-item-quantity" type="number" name="items[quantity]" placeholder="update qty">
+              <input class="update-item" type="submit" value="Update">
+              <input clss="delete-item" type="submit" value="Delete">
             </form>
           </div>
         </div>
