80 percent done with Update and Delete Items

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class='singleItem'>
             <form class='delete'>
               <fieldset>
-                <input clss="delete-item" type="submit" value="Delete">
+                <input class="delete-item" type="submit" value="Delete">
               </fieldset>
             </form>
             <form class ="update">
