Troubleshooting Hide/Show in Array Refresh Path

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </fieldset>
           </form>
         <div class='container'>
-          <div class='singleItem' style="display: none">
+          <div class='singleItem'>
             <form class='delete'>
               <fieldset>
                 <input class="delete-item" type="submit" value="Delete">
