Fixed IEvents Update and Remove by adding Element IDs and clearing in conjunction with array update

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Morth</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -76,7 +76,6 @@
               <input id='createItemButton' type="submit" value="Create">
             </fieldset>
           </form>
-        <div class='container'>
           <div class='singleItem'>
             <form class='delete'>
               <fieldset>
@@ -87,9 +86,10 @@
               <fieldset>
                 <input class="update-item-quantity" type="number" name="items[quantity]" placeholder="update qty">
                 <input class="update-item" type="submit" value="Update">
-              </fieldset
-            </form>
-          </div>
+                </fieldset
+              </form>
+            </div>
+        <div class='container'>
         </div>
     </section>
   </body>
