Hid redundant or useless fields from Invnetory Table

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h2 id="masterLog"></h2>
         <p id="secondLog"></p>
       </div>
-      <section class='inventoryFunctions'>
+      <section class='inventoryFunctions' style="display: none">
           <h1>On Hand Inventory</h1>
           <form id='new-item'>
             <fieldset>
@@ -76,7 +76,7 @@
               <input id='createItemButton' type="submit" value="Create">
             </fieldset>
           </form>
-          <div class='singleItem'>
+          <div class='singleItem' style="display: none">
             <form class='delete'>
               <fieldset>
                 <input class="delete-item" type="submit" value="Delete">
