Adding CSS Fonts & Colors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <input id="sign-up-password" type="password" name="credentials[password]" placeholder="Password">
               <label for="sign-up-password_confirmation">Confirm Password</label>
               <input id="sign-up-password_confirmmation" type="password" name="credentials[password_confirmation]" placeholder="Confirm Password">
-              <input type="submit" value="Create">
+              <input class="auth-button" type="submit" value="Create">
             </fieldset>
           </form>
         </section>
@@ -36,7 +36,7 @@
               <input id="sign-in-email" type="email" name="credentials[email]" placeholder="Email">
               <label for="sign-in-password">Password</label>
               <input id="sign-in-password" type="password" name="credentials[password]" placeholder="Password">
-              <input type="submit" value="Sign in!">
+              <input class="auth-button" type="submit" value="Sign in!">
             </fieldset>
           </form>
         </section>
@@ -48,14 +48,14 @@
               <input id="old-password" type="password" name="passwords[old]" placeholder="Password">
               <label for="new-password_confirmmation">New Password</label>
               <input id="new-password_confirmmation" type="password" name="passwords[new]" placeholder="New Password">
-              <input type="submit" value="Change Password!">
+              <input class="auth-button" type="submit" value="Change Password!">
             </fieldset>
           </form>
         </section>
         <section>
           <form id="sign-out-form" style="display: none">
             <fieldset>
-              <input type="submit" value="Sign-Out">
+              <input class="auth-button" type="submit" value="Sign-Out">
             </fieldset>
           </form>
         </section>
