Adding Bootstrap Classes for Layout Control in HTML Doc

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <input id='createItemButton' type="submit" value="Create">
             </fieldset>
           </form>
-          <div class='singleItem' style="display: none">
+          <div class='container-fluid singleItem' style="display: none">
             <form class='delete'>
               <fieldset>
                 <input class="delete-item" type="submit" value="Delete">
