--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             </form>
             <form class ="update">
               <fieldset>
-                <input class="update-item-quantity" type="number" name="items[quantity]" placeholder="update qty">
-                <input class="update-item" type="submit" value="Update">
+                <input class="update-item-quantity col-12" type="number" name="items[quantity]" placeholder="update qty">
+                <input class="update-item col-12" type="submit" value="Update">
                 </fieldset
               </form>
             </div>
