Adding Flex Font Sizing to Input Fields and Buttons

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
           </form>
           <div class='container-fluid singleItem' style="display: none">
             <form class='delete'>
-              <fieldset>
+              <fieldset class='container-fluid'>
                 <input class="delete-item" type="submit" value="Delete">
               </fieldset>
             </form>
             <form class ="update">
-              <fieldset>
+              <fieldset class='container-fluid'>
                 <input class="update-item-quantity col-12" type="number" name="items[quantity]" placeholder="update qty">
                 <input class="update-item col-12" type="submit" value="Update">
                 </fieldset
